Adicionadas configurações do Jacoco e SonarCloud, além de ajustes nas dependências e tarefas do Gradle